--- a/.config/starship.yml
+++ b/.config/starship.yml
@@ -1,2 +1,24 @@
-format = '$all' 
 
+"$schema" = 'https://starship.rs/config-schema.json'
+
+[git_status]
+conflicted = '🏳'
+ahead = '🏎💨'
+behind = '😰'
+diverged = '😵'
+up_to_date = '✓'
+untracked = '🤷'
+stashed = '📦'
+modified = '📝'
+staged = '[++\($count\)](green)'
+renamed = '👅'
+deleted = '🗑'
+
+[[battery.display]]
+threshold = 100
+style = "bold green"
+
+[os]
+format = "🍎"
+style = "bold blue"
+disabled = false
