--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,6 +13,12 @@ bind -r C-k resize-pane -U 15
 bind -r C-h resize-pane -L 15
 bind -r C-l resize-pane -R 15
 
+# dracula theming 
+set -g @dracula-show-powerline true
+set -g @dracula-battery-colors "dark_purple white" 
+set -g @dracula-network-colors "green dark_gray"
+set -g @dracula-weather-colors "orange dark_gray" 
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'dracula/tmux'
 run '~/.tmux/plugins/tpm/tpm'
