--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,6 +14,7 @@ bind -r C-h resize-pane -L 15
 bind -r C-l resize-pane -R 15
 
 # dracula theming 
+set -g @dracula-show-left-icon 🦫 
 set -g @dracula-show-powerline true
 set -g @dracula-battery-colors "dark_purple white" 
 set -g @dracula-network-colors "green dark_gray"
