--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,9 @@ bind C-Space send-prefix
 bind | split-window -hc "#{pane_current_path}"
 bind - split-window -vc "#{pane_current_path}"
 
+# mouse support 
+set -g mouse on 
+
 # resize 
 bind -r C-j resize-pane -D 15
 bind -r C-k resize-pane -U 15
